<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/host_api_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_host_edit_text_view"
            android:text="@string/value_host_edit_text_view"/>
        <Button
            android:id="@+id/get_api_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_get_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_api_label"/>
        <EditText
            android:id="@+id/city_api_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city_edit_text_view"/>
        <Button
            android:id="@+id/get_city_api_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_get_city_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinates_api_label"/>
        <EditText
            android:id="@+id/latitude_api_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:hint="@string/hint_latitude_edit_text_view"/>
        <EditText
            android:id="@+id/longitude_api_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:hint="@string/hint_longitude_edit_text_view"/>
        <Button
            android:id="@+id/get_coordinates_api_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_get_coordinates_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raw_result_api_label"/>
        <TextView
            android:id="@+id/raw_result_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/parse_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_parse_result_button"/>
    </LinearLayout>
</ScrollView>
