<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/go_to_bound_service_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/value_go_to_bound_service_activity_button"/>
        <Button
            android:id="@+id/go_to_unbound_service_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/value_go_to_unbound_service_activity_button"/>
        <Button
            android:id="@+id/go_to_web_request_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/value_go_to_web_request_activity_button"/>
    </LinearLayout>
</ScrollView>
